@@ -72,7 +72,7 @@ if {$tcl_platform(platform) == "windows"} {
 package forget app-tkchat	;# Workaround until I can convince people
 ;# that apps are not packages.	:)  DGP
 package provide app-tkchat \
-    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.230 $}]
+    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.231 $}]
 
 # Maybe exec a user defined preload script at startup (to set Tk options,
 # for example.
@@ -104,7 +104,7 @@ namespace eval ::tkchat {
     variable HOST http://mini.net
 
     variable HEADUrl {http://cvs.sourceforge.net/viewcvs.py/tcllib/tclapps/apps/tkchat/tkchat.tcl?rev=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.230 2004/11/23 19:09:31 pascalscheffers Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.231 2004/11/23 20:03:47 pascalscheffers Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -3461,9 +3461,10 @@ proc ::tkchat::Debug {cmd args } {
             }
 	}
 	restart {
+	    tkjabber::disconnect
 	    saveRC
 	    eval destroy [winfo children .]
-	    eval font delete {FNT ACT NAME SYS STAMP}
+	    eval font delete [font names]
 	    unset ::Options
 	    Init
 	}
